--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon ./LinkedList/mergeSortLL.ts",
     "romanToInt" : "nodemon ./algorithms/roman_to_integer.ts",
+    "longestCommonPrefix" : "nodemon ./algorithms/longest_common_prefix.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
